# -YADRO-

./: .gitignore  README.md  pyproject.toml
data/: shortage_case.json  surplus_case.json
energy_grid_sim/: __init__.py  cli.py  loader.py  models.py  optimizer.py  reporting.py  simulator.py
tests/: test_simulator.py
